--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
 /build/
+# Específico a NetBeans #
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+
+# Archicos Class #
+*.class
+
+# Otros #
+*.jar
+*.war
+*.ear
